--- a/basic-react/src/App.css
+++ b/basic-react/src/App.css
@@ -1,38 +1,28 @@
-.App {
+.photo {
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+}
+.profile {
+  position: relative;
+  width: 300px;
+  margin: 1rem;
   text-align: center;
+  padding: 1rem;
+  background-color: #ebebeb;
+  border-radius: 20px;
+  box-shadow: 10px 10px 30px 1px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 10px 10px 30px 1px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 10px 10px 30px 1px rgba(0, 0, 0, 0.5);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.state {
+  position: absolute;
+  top: 10%;
+  right: 18%;
+  font-size: 16px;
+  font-weight: 600;
+  background-color: dodgerblue;
+  border-radius: 10px;
+  padding: 0.2rem 0.5rem;
+  text-transform: uppercase;
 }
