--- a/basic-react/src/App.css
+++ b/basic-react/src/App.css
@@ -31,3 +31,47 @@
   padding: 0.2rem 0.5rem;
   text-transform: uppercase;
 }
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.counter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem;
+  padding: 2rem 10rem;
+  border-radius: 1rem;
+  border: 2px solid rgb(215, 127, 12);
+}
+
+.counter:hover {
+  background-color: rgb(246, 243, 197);
+}
+.number {
+  font-size: 7rem;
+}
+.button {
+  font-size: 2rem;
+  padding: 0.2rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  background: rgb(215, 127, 12);
+  background: linear-gradient(
+    90deg,
+    rgba(215, 127, 12, 1) 0%,
+    rgba(253, 220, 29, 1) 100%
+  );
+}
+.banner {
+  background: rgb(253, 220, 29);
+  text-align: center;
+  font-size: 40px;
+  font-weight: 500;
+  margin: 1rem;
+  padding: 0 8rem;
+}
+.total {
+  font-size: 30px;
+}
