--- a/basic-react/src/basic/App.css
+++ b/basic-react/src/basic/App.css
@@ -58,11 +58,7 @@
   border-radius: 0.5rem;
   cursor: pointer;
   background: rgb(215, 127, 12);
-  background: linear-gradient(
-    90deg,
-    rgba(215, 127, 12, 1) 0%,
-    rgba(253, 220, 29, 1) 100%
-  );
+  background: linear-gradient(90deg, rgba(215, 127, 12, 1) 0%, rgba(253, 220, 29, 1) 100%);
 }
 .banner {
   background: rgb(253, 220, 29);
@@ -74,4 +70,13 @@
 }
 .total {
   font-size: 30px;
+}
+.loader {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 70px;
+  font-weight: 300;
 }
